[gd_scene load_steps=10 format=3 uid="uid://8qsc0jp0kdt"]

[ext_resource type="PackedScene" uid="uid://bnoj42obg1lvj" path="res://GameObjects/Player3D/Model/knight_model.tscn" id="1_bbsnw"]
[ext_resource type="Script" uid="uid://b5t4koem0pe7p" path="res://GameObjects/Player3D/Scripts/player_3d.gd" id="1_ibf3h"]
[ext_resource type="PackedScene" uid="uid://c6wc414nd8vqa" path="res://Scenes/PauseMenu/pause_menu.tscn" id="3_3v454"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0hhdb"]
radius = 0.431956
height = 1.8

[sub_resource type="GDScript" id="GDScript_rvv34"]
script/source = "extends Node3D"

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bfvf2"]
points = PackedVector3Array(-2, 0.1, 0.5, -2, 2, 0.5, 2, 0.1, 0.5, 2, 2, 0.5, -3, 0.1, 3, 3, 0.1, 3, -3, 3, 3, 3, 3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_t1ou7"]
size = Vector3(8, 3, 4)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2jnht"]
radius = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_vu4di"]

[node name="Player3D" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_ibf3h")

[node name="PlayerCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_0hhdb")

[node name="KnightModel" parent="." instance=ExtResource("1_bbsnw")]
unique_name_in_owner = true
script = SubResource("GDScript_rvv34")

[node name="Area3D" type="Area3D" parent="KnightModel"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, -4.76837e-07, 5.96046e-08)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="KnightModel/Area3D"]
shape = SubResource("ConvexPolygonShape3D_bfvf2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="KnightModel/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 2)
visible = false
mesh = SubResource("BoxMesh_t1ou7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="KnightModel/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.11758e-22, 1, 2.98023e-08)
visible = false
shape = SubResource("CylinderShape3D_2jnht")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 1.72556, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_vu4di")
spring_length = 7.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource("3_3v454")]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="body_entered" from="KnightModel/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
